# quatrix

./: .gitignore  LICENSE  README.md  audio.py  config.py  edit_model.py  model.py  pyproject.toml  train.py  vision.py  world.py
src/quatrix/: __init__.py  audio.py  cancer_model.py  edit_model.py  model.py  train.py  transformer_lm.py  world.py  world_generative.py
