[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quatrix"
version = "0.2.1"
description = "Q-Compass architecture — RL-grounded sequence mixing for text, vision, audio, world modeling, and cross-field tasks"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Syed Abdur Rehman Ali", email = "ra2157218@gmail.com" }]
keywords = ["deep learning", "transformer", "attention", "reinforcement learning", "multimodal", "language model", "world model", "cancer genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
]

[project.urls]
Homepage = "https://github.com/Abd0r/quatrix"
"Quatrix paper (April 2026)" = "https://zenodo.org/records/19839718"
"Q-Compass paper (March 2026)" = "https://zenodo.org/records/19104202"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quatrix = ["py.typed"]
